fix collapsing sidebar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -205,3 +205,7 @@ img[alt="fit-width"] {
     margin-top:10px;
     margin-bottom:10px;    
 }
+
+@media only screen and (max-device-width: 960px) {
+    #sidebar-col{display:none;}
+}
